src/test/ui/const-generics/uninferred-consts.full.stderr
error[E0282]: type annotations needed
  --> $DIR/uninferred-consts.rs:14:5
   |
LL |     Foo.foo();
   |     ^^^^^^^^^
   |
   = note: unable to infer the value of a const parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
